@@ -1,3 +1,7 @@
+2018-05-31  Yury Aliaev  <mutab0r@rambler.ru>
+	* app/sample-editor.c: Stereo conversion dialogs are made more 
+compact.
+
 2016-07-12  Yury Aliaev  <mutab0r@rambler.ru>
 	* app/gui-subs.c: Bugfix (wrong pointer usage).
 
